--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11460,3 +11460,15 @@ a.text-dark:focus {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.navbar {
+  padding: 0px !important;
+}
+
+.app-header .nav-item .nav-link {
+  padding-right: 20px !important;
+}
+
+.app-header .navbar-nav .dropdown-menu-right {
+  margin-right: 20px !important;
+}
+
