--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,12 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+.navbar{
+  padding:0px !important;
+}
+.app-header .nav-item .nav-link {
+  padding-right:20px !important;
+}
+.app-header .navbar-nav .dropdown-menu-right {
+  margin-right:20px !important;
+}
