--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,3 +27,16 @@
 .app-header .navbar-nav .dropdown-menu-right {
   margin-right:20px !important;
 }
+.router-link-exact-active{
+    color: #fff !important;
+    background: #3a4248 !important;
+}
+ol.breadcrumb{
+  background: #fff;
+}
+main.main{
+  background: #e4e5e6;
+}
+.main .container-fluid {
+  padding:0px !important;
+}
